--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+#MySQL
+spring.datasource.url=jdbc:mysql://localhost:3307/dbstudent?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
 
+spring.jpa.show-sql=true
+
+#Servidor Web
+server.port=9000
