--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,3 +1,3 @@
 org.hibernate.validator.constraints.br.CPF.message = Inválido
-javax.validation.constraints.NotNull.message = Campo obrigatorio
+javax.validation.constraints.NotNull.message = Campo obrigatório
 javax.validation.constraints.Email.message = Inválido
